[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "augmented_hurricane_database"
version         = "0.1.0"
description     = "NHC HURDAT2 best-track ingest: download Atlantic/Pacific, derive heading + translation speed, write a HURDAT-like CSV."
readme          = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Norberto C. Nadal-Caraballo, PhD", email = "norberto.c.nadal-caraballo@usace.army.mil"},
]
license = {text = "Public domain (U.S. Government work, 17 U.S.C. §105)"}
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyproj>=3.4",
  "pydantic>=2.0",
  "requests>=2.28",
  "scipy>=1.10",      # GP-metamodel calibration (Cholesky, QR, L-BFGS-B)
]

[project.optional-dependencies]
dev = [
  "pyarrow>=12.0",   # optional Parquet output
  "pytest>=7.4",     # test-time
]

[tool.setuptools]
py-modules = ["main_augmented_hurricane_database"]

[tool.setuptools.packages.find]
where    = ["backend/python"]
include  = ["augmented_hurricane_database*"]
