[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "coastal_storm_hydrograph"
version         = "0.1.0"
description     = "Per-save-point unit (scalable) storm-surge hydrographs via double normalization (peak elevation + equivalent width)."
readme          = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Norberto C. Nadal-Caraballo, PhD", email = "norberto.c.nadal-caraballo@usace.army.mil"},
]
license = {text = "Public domain (U.S. Government work, 17 U.S.C. §105)"}
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
  "scipy>=1.10",      # generalized-Gaussian limb fit (hydrograph.fit_limbs)
]

[project.optional-dependencies]
plots = [
  "matplotlib>=3.6",  # per-save-point diagnostic figures
]
dev = [
  "matplotlib>=3.6",
  "pytest>=7.4",
]

[tool.setuptools]
py-modules = ["main_coastal_storm_hydrograph"]

[tool.setuptools.packages.find]
where    = ["backend/python"]
include  = ["coastal_storm_hydrograph*"]
