[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "life_cycle_simulation"
version         = "0.1.0"
description     = "Monte-Carlo synthetic tropical-cyclone life cycles for a CRL, driven by the storm_climatology_analysis SRR: Poisson annual counts, intensity strata, and day-of-year of occurrence."
readme          = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Norberto C. Nadal-Caraballo, PhD", email = "norberto.c.nadal-caraballo@usace.army.mil"},
]
license = {text = "Public domain (U.S. Government work, 17 U.S.C. §105)"}
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
plots = [
  "matplotlib>=3.6",  # per-CRL diagnostic figures
]
dev = [
  "matplotlib>=3.6",
  "pytest>=7.4",
]

[project.scripts]
pystorm-lcs = "run_life_cycle_simulation:main"

[tool.setuptools]
py-modules = ["api_life_cycle_simulation", "run_life_cycle_simulation"]

[tool.setuptools.packages.find]
where    = ["backend/python"]
include  = ["life_cycle_simulation*"]
