[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "reduced_storm_suite"
version         = "0.1.0"
description     = "Reduced Storm Suite (RSS) selection: k-medoids subset, DSW back-computation, HC reconstruction."
readme          = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Norberto C. Nadal-Caraballo, PhD", email = "norberto.c.nadal-caraballo@usace.army.mil"},
]
license = {text = "Public domain (U.S. Government work, 17 U.S.C. §105)"}
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "h5py>=3.10",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
kmedoids-extra = ["scikit-learn-extra>=0.3"]   # optional second-tier k-medoids backend
dev = [
  "pybind11>=2.11",   # build-time (backend/engines/cpp/build.py)
  "pytest>=7.4",      # test-time
]

[tool.setuptools]
# CyHAN v2.1 §5.3 / §16.2 orchestrator entry, sibling of the expanded package.
py-modules = ["main_reduced_storm_suite"]

[tool.setuptools.packages.find]
where    = ["backend/python"]
include  = ["reduced_storm_suite*"]

[tool.setuptools.package-data]
"reduced_storm_suite" = ["*.pyd", "*.so", "*.dylib"]
