[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "tc_climatological_analysis"
version         = "0.1.0"
description     = "CRL-based tropical-cyclone storm recurrence rates (SRR/DSRR) from the augmented HURDAT2 best-track, annual and monthly, via the Gaussian Kernel Function."
readme          = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Norberto C. Nadal-Caraballo, PhD", email = "norberto.c.nadal-caraballo@usace.army.mil"},
]
license = {text = "Public domain (U.S. Government work, 17 U.S.C. §105)"}
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
plots = [
  "matplotlib>=3.6",  # per-CRL selected-TC maps
  "pyshp>=2.3",       # Natural Earth shapefile reader (coastline + boundaries)
  "requests>=2.28",   # one-time Natural Earth basemap download
]
dev = [
  "matplotlib>=3.6",
  "pyshp>=2.3",
  "requests>=2.28",
  "pytest>=7.4",
]

[tool.setuptools]
py-modules = ["main_tc_climatological_analysis"]

[tool.setuptools.packages.find]
where    = ["backend/python"]
include  = ["tc_climatological_analysis*"]
